--- a/index.Rmd
+++ b/index.Rmd
@@ -22,7 +22,7 @@ library(tadaatoolbox)
 ```{r data, echo=FALSE, message=FALSE, warning=FALSE}
 
 # Load COVID-19 case data from Michigan state site
-download.file("https://www.michigan.gov/documents/coronavirus/Cases_and_Deaths_by_County_and_Date_2020-08-27_700645_7.xlsx", destfile="./rawData/Cases_by_County_and_Date.xlsx")
+download.file("https://www.michigan.gov/documents/coronavirus/Cases_and_Deaths_by_County_and_Date_2020-08-28_700845_7.xlsx", destfile="./rawData/Cases_by_County_and_Date.xlsx")
 michiganData <- read_xlsx("./rawData/Cases_by_County_and_Date.xlsx")
 
 # Load county census data
@@ -234,13 +234,14 @@ The intial spike of COVID-19 cases appears to have spiked around the beginning o
 
 Finally, I am also interested in comparing how Ferris State University does in controlling COVID-19 compared to Central Michigan University. Figure 4 compares the total number of COVID-19 cases between Mecosta and Isabella counties.
 
-```{r county_plot, echo=FALSE, message=FALSE, warning=FALSE, fig.width=12, fig.height=7, fig.cap="**Figure 4:** A comparison of the number of total cases in Mecosta (red) and Isabella (blue) counties. The bars indicate total daily cases and the lines are five-day moving averages."}
+```{r county_plot, echo=FALSE, message=FALSE, warning=FALSE, fig.width=12, fig.height=7, fig.cap="**Figure 4:** A comparison of the number of total cases in Isabella (including Central Michigan University, Mecosta (including Ferris State University) and Ottawa (including Grand Valley State University) counties. The bars indicate total daily cases and the lines are five-day moving averages."}
 counties <- michiganTotalData %>% 
-  filter(County == "isabella" | County == "mecosta" )
+  filter(County == "isabella" | County == "mecosta" | County == "ottawa")
 ggplot(counties, aes(x=Date, y=Cases, color=County)) +
-  scale_colour_manual(values=c('mecosta'="firebrick", 'isabella'="dodgerblue")) +
+  scale_colour_manual(values=c('mecosta'="firebrick", 'isabella'="dodgerblue", 'ottawa'="steelblue")) +
   geom_bar(stat = "identity") +
   geom_ma(ma_fun = EMA, n = 5, wilder = TRUE, linetype = 1, size = 2) +
+  facet_grid(rows=vars(County)) +
   ylim(0,30) +
   theme_bw() +
   theme(legend.position="none")
